--- a/oreniomakase/disney.html
+++ b/oreniomakase/disney.html
@@ -8,69 +8,83 @@
     <title>Disney Goods</title>
 </head>
 <body>
-    <div>
-        <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Store Logo">
+    <header class="site-header">
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/logo.png" alt="Store Logo">
             </a>
-            <div>
-                <h1>Leave it to us!</h1>
-            </div>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="disney.html">Disney Goods</a>
-                <a href="starbucks.html">Starbucks Goods</a>
-            </nav>
+        </div>
+        <div class="header-h1">
+            <h1>Leave it to us!</h1>
+        </div>
+    </header>
+    <nav class="navigation">
+        <a class="text-link" href="index.html">Home</a>
+        <a class="text-link" href="disney.html">Disney Goods</a>
+        <a class="text-link" href="starbucks.html">Starbucks Goods</a>
+        <a class="text-link" href="site-plan.html" target="_blank">Site Plan</a>
+    </nav>
         </header>
-        <main class="disney-main">
+        <main class="subpage-main">
             <section>
                 <div>
-                    <img id="disney-in-japan-img" src="images/disney-at-night-small.jpg" alt="Tokyo Disneyland">
+                    <img class="subpage-main-img" src="images/disney-at-night.jpg" alt="Tokyo Disneyland">
                 </div>
             </section>
-            <section class="disney-in-japan">
-                <h2>Disney in Japan</h2>
+            <section>
+                <h2 class="subpage-title">Disney in Japan</h2>
                 <p>
-                    Disney is hugely popular in Japan, which is made abundantly apparent from the many exclusives that are launched here. While sm-home are released in stores such as the Disney Flagship Store in downtown Tokyo, the majority of the exclusives are reserved for the Disney parks themselves.
+                    Disney has long been hugely popular in Japan, which was the second country in the world to get its Disney theme park and the first outside of the US.
+                    <br>
+                    As such, there is a large variety of merchandise to be found, including exclusive lineups available only at Disney Sea - Japan's unique Disney park located next to Tokyo Disneyland.
+                    <br>
+                    Additionally, there are Disney stores in and around the greater Tokyo area, as well as the Disney Flagship Store in downtown Tokyo, which offers many items year-round and its own exclusive lineups.
                 </p>
             </section>
-            <section>
-                <div>
-                    <img id="we-got-you-img" src="images/disney-tokyo-train-small.jpg" alt="Mickey-themed straps">
-                </div>
-            </section>
-            <section class="we-got-you">
+            <section class="subpage-subsection">
+                <img class="subpage-sub-img" src="images/disney-tokyo-train.jpg" alt="Mickey-themed straps">
                 <h2>We've Got You Covered!</h2>
                 <p>
-                    But no need to worry! Leave it to us! We take regular trips to Disneyland and Disney Sea and make sure we're there for every major launch during the year. What's more, we have immediate access to the Flagship Store and visit it regularly. If you're hankering for the latest Mickey merch or want to spend a bit more time with Duffy and Friends, we've got you covered!
+                    We take regular trips to Disneyland and Disney Sea and make sure we're there for every major launch during the year.
+                    <br>
+                    What's more, we make regular visits to the Flagship Store in Shinjuku for non-park exclusives and seasonal merchandise!
+                    <br>
+                    If you're hankering for the latest Mickey merch or want to spend a bit more time with Duffy and Friends, we've got you covered!
                 </p>
             </section>
-            <section class="product1-card">
-                <img class="card-img" src="" alt="">
-            </section>
-            <section class="product2-card">
-                <img class="card-img" src="" alt="">
-            </section>
-            <section class="product3-card">
-                <img class="card-img" src="" alt="">
-            </section>
-            <div id="sample-products"></div>
-            <section class="sample-products-msg">
-                <p>Above are a few of the more recent lineups that have been on sale. On the left is Lineup #1 featuring Cute Characters A, B, C. In the center is Lineup #2 with Fan Favorite celebrating Event. On the right is Lineup #3 with Blank.</p>
-            </section>
+            <div class="sample-products">
+                <section>
+                    <img class="card-img" src="images/disney-christmas-dolls.jpg" alt="Disney Christmas Dolls">
+                    <p>Dolls of Mickey, Minnie, Pluto, and the Chipmunks in Santa<br>attire as part of the 2022 Christmas lineup.</p>
+                </section>
+                <section>
+                    <img class="card-img" src="images/disney-new-years-crop.jpg" alt="Disney New Year Lineup">
+                    <p>Exclusive Mickey and Minnie daruma dolls in celebration<br>of the 2023 new year.</p>
+                </section>
+                <section>
+                    <img class="card-img" src="images/disney-flagship-30th-crop.jpg" alt="Disney Store 30th Anniversary Goods">
+                    <p>A special crossover between Disney and Godiva to<br>celebrate the Disney Store's 30th anniversary.</p>
+                </section>
+                <section class="sample-products-msg">
+                    <p>Above are a few of the more recent lineups that we have featured from the Disney flagship store in Tokyo. See anything you like?
+                    <br>
+                    Well, there is plenty more where that came from! If you are at all interested in Disney, you won't regret stopping by our Instagram.
+                    <br>
+                    And remember: if there's something you want that you don't see on our page, you can always reach out and make a request, and we'll do our best to get it for you!</p>
+                </section>
+            </div>
         </main>
         <footer>
             <p>&copy; 2023 - Brandon Cushenberry</p>
-            <p><a href="index.html">Home</a></p>
-            <p><a href="disney.html">Disney Goods</a></p>
-            <p><a href="starbucks.html">Starbucks Goods</a></p>
-            <p><a href="site-plan.html" target="_blank">Site Plan</a></p>
+            <a class="text-link" href="index.html">Home</a>
+            <a class="text-link" href="disney.html">Disney Goods</a>
+            <a class="text-link" href="starbucks.html">Starbucks Goods</a>
+            <a class="text-link" href="site-plan.html" target="_blank">Site Plan</a>
             <div class="social">    
                 <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
-    </div>  
 </body>
 </html>
