--- a/oreniomakase/starbucks.html
+++ b/oreniomakase/starbucks.html
@@ -5,59 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Disney Goods</title>
+    <title>Starbucks Goods</title>
 </head>
 <body>
-    <div>
-        <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Store Logo">
+    <header class="site-header">
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/logo.png" alt="Store Logo">
             </a>
-            <div>
-                <h1>Leave it to us!</h1>
-            </div>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="disney.html">Disney Goods</a>
-                <a href="starbucks.html">Starbucks Goods</a>
-            </nav>
+        </div>
+        <div class="header-h1">
+            <h1>Leave it to us!</h1>
+        </div>
+    </header>
+    <nav class="navigation">
+        <a class="text-link" href="index.html">Home</a>
+        <a class="text-link" href="disney.html">Disney Goods</a>
+        <a class="text-link" href="starbucks.html">Starbucks Goods</a>
+        <a class="text-link" href="site-plan.html" target="_blank">Site Plan</a>
+    </nav>
         </header>
-        <main class="starbucks-main">
+        <main class="subpage-main">
             <section>
                 <div>
-                    <img id="starbucks-in-japan-img" src="images/starbucks-small.jpg" alt="Starbucks in Japan">
+                    <img class="subpage-main-img" src="images/starbucks-medium.jpg" alt="Starbucks in Japan">
                 </div>
             </section>
-            <section class="starbucks-in-japan">
-                <h2>Starbucks in Japan</h2>
+            <section>
+                <h2 class="subpage-title">Starbucks in Japan</h2>
                 <p>
-                    Starbucks tumblers have long been the object of many a collector's eye, and the coffee giant's seasonal offerings in Japan could comfortably fit in anyone's collection! From exclusive designs that incorporate the creative, adorable aesthetic found throughout Japanese pop culture, to special exclusive crossovers like the recent Snoopy lineup, there's sure to be something for everyone, coffee lover or not!
+                    Starbucks tumblers have long been the object of many a collector's eye, and the coffee giant's seasonal offerings in Japan could comfortably fit in anyone's collection!
+                    <br>
+                    From exclusive designs that incorporate the creative, adorable aesthetic found throughout Japanese pop culture, to special exclusive crossovers like the recent Snoopy lineup, there's sure to be something for everyone, coffee lover or not!
                 </p>
             </section>
-            <section>
-                <div>
-                    <img id="starbucks-roastery-img" src="images/starbucks-roastery.avif" alt="The Starbucks Reserve Roastery in Tokyo">
-                </div>
-            </section>
-            <section class="starbucks-roastery">
+            <section class="subpage-subsection">
+                <img class="subpage-sub-img" src="images/starbucks-roastery.jpg" alt="The Starbucks Reserve Roastery in Tokyo">
                 <h2>The Starbucks Reserve Roastery</h2>
                 <p>
-                    In addition to the regular Starbucks merchandise, there is also a special Starbucks Roastery in Tokyo that features exclusive merchandise of its own! Positioned as a higher-end type of Starbucks, the tumblers and other products offered exhibit a certain flair that differentiate them from standard Starbucks fare.
+                    In addition to the regular Starbucks merchandise, there is also a special Starbucks Roastery in Tokyo that features exclusive merchandise of its own!
+                    <br>
+                    Positioned as a higher-end type of Starbucks, the tumblers and other products offered exhibit a certain flair that differentiate them from standard Starbucks fare.
                 </p>
             </section>
-            <section class="product1-card">
-                <img class="card-img" src="" alt="">
-            </section>
-            <section class="product2-card">
-                <img class="card-img" src="" alt="">
-            </section>
-            <section class="product3-card">
-                <img class="card-img" src="" alt="">
-            </section>
-            <div id="sample-products"></div>
-            <section class="sample-products-msg">
-                <p>Above are a few of the more recent lineups that have been on sale. On the left is Lineup #1 that was released during the ABC season. In the center is Lineup #2, which was part of the XYZ season. On the right is a peek at some of the Starbucks Reserve lineup.</p>
-            </section>
+            <div class="sample-products">
+                <section>
+                    <img class="card-img" src="images/" alt="">
+                    <p><br></p>
+                </section>
+                <section>
+                    <img class="card-img" src="images/" alt="">
+                    <p><br></p>
+                </section>
+                <section>
+                    <img class="card-img" src="images/" alt="">
+                    <p><br></p>
+                </section>
+                <section class="sample-products-msg">
+                    <p>Above are a few of the more recent lineups that we have featured from Starbucks in Japan and the Starbucks Reserve Roastery in Tokyo. See anything you like?
+                    <br>
+                    If you are at all interested in tumblers and other drinkware from Starbucks, you won't regret stopping by our Instagram.
+                    <br>
+                    And remember: if there's something you want that you don't see on our page, you can always reach out and make a request, and we'll do our best to get it for you!</p>
+                </section>
+            </div>
         </main>
         <footer>
             <p>&copy; 2023 - Brandon Cushenberry</p>
