--- a/oreniomakase/index.html
+++ b/oreniomakase/index.html
@@ -19,9 +19,10 @@
         </div>
     </header>
     <nav class="navigation">
-        <a href="index.html">Home</a>
-        <a href="disney.html">Disney Goods</a>
-        <a href="starbucks.html">Starbucks Goods</a>
+        <a class="text-link" href="index.html">Home</a>
+        <a class="text-link" href="disney.html">Disney Goods</a>
+        <a class="text-link" href="starbucks.html">Starbucks Goods</a>
+        <a class="text-link" href="site-plan.html" target="_blank">Site Plan</a>
     </nav>
     <div id="hero">
         <div id="hero-box">
@@ -67,10 +68,10 @@
     </main>
     <footer>
         <p>&copy; 2023 - Brandon Cushenberry</p>
-        <p><a href="index.html">Home</a></p>
-        <p><a href="disney.html">Disney Goods</a></p>
-        <p><a href="starbucks.html">Starbucks Goods</a></p>
-        <p><a href="site-plan.html" target="_blank">Site Plan</a></p>
+        <a class="text-link" href="index.html">Home</a>
+        <a class="text-link" href="disney.html">Disney Goods</a>
+        <a class="text-link" href="starbucks.html">Starbucks Goods</a>
+        <a class="text-link" href="site-plan.html" target="_blank">Site Plan</a>
         <div class="social">    
             <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
